# Dojo-1

./: BUILD_SCRIPT_UPDATES.md  README.md  REDUNDANCY_ANALYSIS.md  SCRIPTS_README.md  build_and_fix.sh  build_ros2.sh  build_ros2_pi.sh  check_simulation_status.sh  clean_install.sh  cleanup_redundancy.sh  create_missing_dirs.sh  create_nav_configs.sh  diagnose_camera.sh  diagnose_complete_simulation.sh  diagnose_simulation.sh  diagnose_teleop.sh  fix_camera_complete.sh  fix_camera_issue.sh  fix_cmake.sh  fix_complete_simulation.sh  fix_python_pkgs.sh  fix_robot_perception.sh  fix_workspace.sh  install_missing_packages.sh  install_xterm.sh  launch_house.sh  launch_office.sh  launch_stable_simulation.sh  launch_warehouse.sh  monitor_simulation.sh  run_docker_simulation.sh  run_full_simulation.sh  run_simple_simulation.sh  run_teleop.sh  run_tests_in_container.sh  test_arduino_bridge.py  test_arduino_bridge.sh  test_build.sh  test_complete_simulation.sh  test_controller_topics.sh  (+6 more)
.kiro/specs/fix-robot-perception/: design.md  requirements.md  tasks.md
backup_packages/arduino_bridge/: arduino_sketch.ino  package.xml
backup_packages/arduino_bridge/launch/: test_arduino.launch.py
backup_packages/camera_ws/install/: local_setup.sh  setup.sh
backup_packages/robot_sensors/: setup.py
backup_packages/robot_sensors/config/: laser_filter_config.yaml
backup_packages/robot_sensors/launch/: sensors.launch.py  test_lidar.launch.py
backup_packages/robot_sensors/nv21_converter_pkg/: package.xml  setup.py
backup_packages/robot_sensors/robot_sensors/: camera_node.py
backup_packages/ros2arduino_bridge/: setup.cfg  setup.py
backup_packages/ros2arduino_bridge/config/: ros2arduino_bridge_params.yaml
backup_packages/ros2arduino_bridge/ros2arduino_bridge/: __init__.py  arduino_bridge.py
backup_packages/ros2arduino_bridge/ros2arduino_bridge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
backup_packages/ros2arduino_bridge/ros2arduino_bridge_backup/: package.xml  test_arduino_bridge.py
backup_packages/vision_system/vision_system/: object_detector.py
backup_redundant_launch_files/: complete_simulation.launch.py  full_simulation.launch.py  sim_control.launch.py  simulation.launch.py
camera_ws/camera_ws/: test.h264
firmware/arduino/ros2_motor_controller/: ros2_motor_controller.ino
install/: local_setup.sh  setup.sh
log/: latest_build  latest_graph  latest_info  latest_list
robot_launch/: package.xml  setup.py
robot_launch/launch/: robot_complete.launch.py
src/Robot_description1/: CMakeLists.txt
src/Robot_description1/launch/: display.launch.py  rviz.launch.py  (+1 more)
src/arduino_bridge/: motor_encoder_test.ino  package.xml  setup.py
src/robot_bringup/: CMakeLists.txt
src/robot_control/: package.xml  setup.py
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/launch/: display.launch.py  robot_state_publisher.launch.py
src/robot_description/rviz/: display.rviz  dojo_robot.rviz  robot.rviz
src/robot_description/scripts/: display_robot.py
src/robot_description/urdf/: common_properties.xacro  dojo_robot.gazebo  dojo_robot.urdf.xacro  robot.urdf  robot.urdf.xacro
src/robot_description/urdf/sensors/: rplidar.urdf.xacro
src/robot_gazebo/: CMakeLists.txt  package.xml  setup.py
src/robot_gazebo/config/: diff_drive_controller.yaml  ekf_config.yaml  ros2_control.yaml  slam_config.yaml
src/robot_gazebo/launch/: docker_simulation.launch.py  full_simulation.launch.py  gazebo.launch.py  perception_wrapper.launch.py  robot_simulation.launch.py  simple_simulation.launch.py  simulation.launch.py  unified_simulation.launch.py
src/robot_gazebo/robot_gazebo/: __init__.py  cmd_vel_relay.py
src/robot_gazebo/rviz/: complete_simulation.rviz  full_simulation.rviz  robot_simulation.rviz  simulation.rviz
src/robot_gazebo/worlds/: demo_world.world  dojo_world.world  empty.world
src/robot_hardware/: package.xml  setup.cfg  setup.py
src/robot_hardware/config/: hardware.yaml
src/robot_hardware/launch/: hardware.launch.py
src/robot_hardware/robot_hardware/: hardware_manager.py
src/robot_hardware/robot_hardware/drivers/: arduino_driver.py  camera_driver.py  lidar_driver.py
src/robot_interfaces/: CMakeLists.txt
src/robot_navigation/: CMakeLists.txt  package.xml
src/robot_navigation/config/: bt_navigator_params.yaml  controller_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  localization_params.yaml  map_server_params.yaml  nav2_params.yaml  planner_params.yaml
src/robot_navigation/launch/: localization.launch.py  map_server.launch.py  nav2.launch.py  navigation.launch.py
src/robot_perception/: CMakeLists.txt  DEPENDENCIES.md  DEPENDENCY_FIXES.md  README.md  SETUP_CHANGES.md  package.xml  setup.py  test_dependencies.py  verify_setup.py
src/robot_perception/config/: robot_perception_params.yaml
src/robot_perception/launch/: perception.launch.py
src/robot_perception/robot_perception/: __init__.py  camera_processor.py  object_detector.py
src/robot_sensors/: package.xml  setup.py
src/robot_sensors/camera_ros/: __init__.py  package.xml  setup.py
src/robot_sensors/camera_ros/config/: camera_info.yaml
src/robot_sensors/launch/: camera.launch.py  rplidar.launch.py  sensors.launch.py
src/robot_sensors/nv21_converter_pkg/: __init__.py  package.xml  setup.py
src/robot_sensors/robot_sensors/: camera_publisher.py
src/robot_sensors/robot_sensors/nodes/: __init__.py
src/ros2arduino_bridge/: CMakeLists.txt  README.md  package.xml  setup.py
src/ros2arduino_bridge/arduino/ros2arduino_bridge/: ros2arduino_bridge.ino
src/ros2arduino_bridge/config/: ros2arduino_bridge_params.yaml
src/ros2arduino_bridge/launch/: arduino_bridge.launch.py  ros2arduino_bridge.launch.py
src/ros2arduino_bridge/ros2arduino_bridge/: arduino_bridge.py  package.xml  setup.cfg  setup.py
src/ros2arduino_bridge/scripts/: arduino_bridge
src/vision_system/: README.md  package.xml  setup.py
src/vision_system/launch/: vision_system.launch.py
src/vision_system/vision_system/config/: object_detector_params.yaml
(+573 files in other folders)
