<?xml version="1.0"?>
<package format="3">
  <name>robot_navigation</name>
  <version>0.0.1</version>
  <description>Navigation configuration and launch files for the robot</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_util</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_core</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_msgs</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_recoveries</depend>
  <depend>nav2_regulated_pure_pursuit_controller</depend>
  <depend>nav2_rotation_shim_controller</depend>
  <depend>nav2_rviz_plugins</depend>
  <depend>nav2_simple_commander</depend>
  <depend>nav2_smac_planner</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_behavior_tree</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_waypoint_follower</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_smoother</depend>
  <depend>nav2_velocity_smoother</depend>
  <depend>nav2_collision_monitor</depend>
  <depend>nav2_controller</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
