<?xml version="1.0"?>
<package format="3">
  <name>robot_sensors</name>
  <version>0.0.1</version>
  <description>Camera and LiDAR sensor interfaces for the robot.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>camera_info_manager</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
