<?xml version="1.0"?>
<package format="3">
  <name>robot_sensors</name>
  <version>0.0.1</version>
  <description>Camera and LiDAR sensor interfaces for the robot.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- Camera dependencies -->
  <depend>camera_ros</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  
  <!-- LiDAR dependencies -->
  <depend>rplidar_ros</depend>
  <depend>laser_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
