<?xml version="1.0"?>
<package format="3">
  <name>robot_sensors</name>
  <version>0.0.1</version>
  <description>Camera and LiDAR sensor interfaces for the robot.</description>
  <maintainer email="you@example.com">You</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <!-- Core ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- Camera dependencies -->
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>
  <depend>libcamera</depend>
  <depend>rclcpp_components</depend>
  <depend>image_transport_plugins</depend>
  
  <!-- LiDAR dependencies -->
  <depend>laser_filters</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  
  <!-- Python dependencies -->
  <depend>python3-numpy</depend>
  <depend>python3-opencv</depend>
  
  <!-- Build and test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
